@@ -3,6 +3,8 @@ setGeneric("getUnmeth", function(object) standardGeneric("getUnmeth"))
 setGeneric("getBeta", function(object, ...) standardGeneric("getBeta"))
 setGeneric("getM", function(object, ...) standardGeneric("getM"))
 setGeneric("mapToGenome", function(object, ...) standardGeneric("mapToGenome"))
+setGeneric("ratioConvert", function(object, ...) standardGeneric("ratioConvert"))
 setGeneric("getManifest", function(object) standardGeneric("getManifest"))
 setGeneric("getLocations", function(object, ...) standardGeneric("getLocations"))
 setGeneric("preprocessMethod", function(object) standardGeneric("preprocessMethod"))
+setGeneric("getCN", function(object, ...) standardGeneric("getCN"))
